Wed Aug  9 16:28:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - libhid debugging: print full report descriptor

 - data/driver.list: added Tripp-Lite 1500 LCD.

Mon Aug  7 20:30:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups, mge-shut: changes in debugging code. Reimplemented
   common.h:upsdebug_hex(). Removed dump_hex() in libhid.c and
   mge-shut.c. Removed TRACE() macro. Changed some debugging levels.

 - libusb.c: make sure report length does not exceed buffer size.

 - data/driver.list: added CPS 800AVR, AE550, Tripp-Lite OMNI1000LCD,
   AVR550U.

Sun Aug  6 13:52:45 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Changed driver to megatec for PowerMan RealSmart 800 and 1000 in driver.list

Sun Aug  6 04:05:08 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/libusb: instead of using the maximum of the two report
   descriptor lengths, always use the second value when available (it
   seems to be more reliable). Also, when the report descriptor is
   finally shorter than expected, no longer abort, but live with it
   (this might help on some APC devices).

Sun Aug  6 03:39:19 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/libusb: attempt to fix Tripp Lite problem: buggy UPS
   reports wrong report descriptor length. We now retrieve it two
   different ways and use the maximum value.

Fri Aug  4 18:39:45 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Added PowerMan RealSmart 800 and 1000, also the PowerMan BackPro to
   driver.list

Tue Aug  3 21:30:45 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Changed bcmxcp driver to support 3-phase. And made some adjustment
   to bcmxcp.h for the future use.

Mon Jul 31 13:45:34 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - hotplug, hotplug-ng: modify the permissions from 660 to 664 so
   that all users can see the device(s) using lsusb
